tests/ui/traits/cache-reached-depth-ice.stderr
error: evaluate(Binder { value: TraitPredicate(<A as std::marker::Send>, polarity:Positive), bound_vars: [] }) = Ok(EvaluatedToOk)
  --> $DIR/cache-reached-depth-ice.rs:44:5
   |
LL | fn test<X: PointeeSized + Send>() {}
   |                           ---- predicate
...
LL |     test::<A>();
   |     ^^^^^^^^^

error: aborting due to 1 previous error

